# AgentWhetters-cybergym

./: .env.example  .gitignore  README.md  amber-manifest.json5  b-w-i-m  pyproject.toml  scenario-auto.toml  scenario-level3.toml  scenario-multi.toml  swe-bench-pro
.github/workflows/: test-and-publish.yml
agentbeats/: client_cli.py  run_scenario.py
cybergym-green/: Dockerfile  README.md  amber-manifest.json5  pyproject.toml
cybergym-green/.github/workflows/: test-and-publish.yml
cybergym-green/src/: agent.py  executor.py  server.py
cybergym-green/tests/: conftest.py
cybergym-purple/: .env.example  Dockerfile  README.md  amber-manifest.json5  mle-bench  pyproject.toml  scenario-auto.toml  scenario.toml
cybergym-purple/.github/workflows/: test-and-publish.yml
cybergym-purple/agentbeats/: client.py  models.py
cybergym-purple/src/: agent.py  binary_mutator.py  codebase_triage.py  executor.py  log_config.py  messenger.py  server.py  token_tracker.py
cybergym-purple/tests/: conftest.py  test_integration.py  test_parser.py
src/: agent.py  binary_mutator.py  codebase_triage.py  feedback_classifier.py  hypothesis_parser.py  log_config.py  memory_system.py  server.py  taint_extractor.py
tests/: test_agent.py  test_classifier.py
